--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="main-wrapper">
 		<a href="articles/roadmap.html">
 			<div class="content">
-				<img class="content__image" src="study-roadmap.png" alt="学習計画">
+				<img class="content__image" src="images/study-roadmap.png" alt="学習計画">
 				<h2 class="content__title">【基礎編】Webデザイナーになるための学習計画</h2>
 				<p class="content__text">Webデザイナー初学者として学ぶべき基礎的な事柄をリストアップしたもの</p>
 			</div>
